--- a/lab_4/load_iris_code.ipynb
+++ b/lab_4/load_iris_code.ipynb
@@ -1245,12 +1245,12 @@
    "metadata": {},
    "source": [
     "<b> Аналіз результатів:</b><br><br>\n",
-    "1. Аналіз початкових даних\n",
+    "1. Аналіз початкових даних<br>\n",
     "Набір даних Iris, що містить 150 зразків квітів ірисів трьох видів (Setosa, Versicolor, Virginica) по 50 зразків кожного виду. Кожен зразок характеризується чотирма числовими ознаками: довжиною і шириною чашолистка (sepal length, sepal width) та довжиною і шириною пелюстки (petal length, petal width).Попередній аналіз даних показав наявність виразної структури у датасеті. Візуалізація за допомогою pairplot та 3D графіків виявила, що клас Setosa добре відокремлений від двох інших класів за всіма ознаками, особливо за параметрами пелюсток. Натомість класи Versicolor та Virginica демонструють значне перекриття в просторі ознак, що створює додаткову складність для алгоритмів кластеризації.Аналіз кореляцій між ознаками показав сильний позитивний зв'язок між довжиною пелюстки та шириною пелюстки, а також між розмірами чашолистка та пелюстки. Це свідчить про те, що ознаки не є повністю незалежними, але несуть різну інформацію про структуру даних.Перед застосуванням алгоритму BIRCH дані були масштабовані за допомогою StandardScaler, що є критично важливим кроком, оскільки ознаки мають різні діапазони значень (наприклад, довжина чашолистка: 4.3-7.9 см, ширина чашолистка: 2.0-4.4 см).\n",
     "\n",
-    "2. Оцінка швидкодії алгоритму BIRCH\n",
+    "2. Оцінка швидкодії алгоритму BIRCH<br>\n",
     "Одним з ключових завдань роботи була оцінка швидкодії алгоритму BIRCH на наборах даних різного розміру. Тестування проводилося на синтетичних даних з розмірами від 150 до 1,000,000 зразків. Аналіз отриманих результатів підтверджує теоретичну лінійну складність алгоритму O(n). При збільшенні обсягу даних у 6667 разів (від 150 до 1,000,000 зразків), час виконання збільшився лише у 2097 разів, що значно менше квадратичної залежності. Графік залежності часу від розміру датасету на логарифмічній шкалі демонструє практично лінійну залежність.Важливо відзначити, що час обробки одного зразка зменшується зі збільшенням розміру датасету (від 7×10⁻⁵ сек для 150 зразків до 2.2×10⁻⁵ сек для 1,000,000 зразків), що свідчить про ефективність алгоритму при роботі з великими обсягами даних. Це робить BIRCH ідеальним вибором для аналізу надвеликих наборів даних, де традиційні ієрархічні методи кластеризації були б надто повільними.\n",
-    "\n",
+    "<br>\n",
     "3. Аналіз якості кластеризації<br>\n",
     "3.1. Базова модель BIRCH з параметрами threshold=0.5, branching_factor=50, n_clusters=3 успішно виявила три кластери в даних за 0.0074 секунди. Розподіл зразків по кластерах склав 71, 49 та 30 зразків відповідно, що дещо відрізняється від рівномірного розподілу справжніх класів (50-50-50).<br>\n",
     "3.2. Було побудовано 19 альтернативних моделей з різними комбінаціями параметрів. <br>\n",
@@ -1263,12 +1263,11 @@
     "Estimated Number of Clusters: Більшість моделей правильно ідентифікували 3 кластери, що відповідає структурі даних.\n",
     "Adjusted Rand Index (0.548-0.683): Показує помірну до хорошої відповідність з істинними класами. Найкраще значення 0.683 для моделі thresh_0.1 свідчить про 68.3% узгодженості кластерів з справжніми класами.Adjusted Mutual Information (0.657-0.746): Вищі значення AMI порівняно з ARI вказують на те, що моделі краще відтворюють інформаційну структуру класів, ніж точні збіги пар об'єктів.\n",
     "Silhouette Coefficient (0.348-0.577): Помірні значення (0.4-0.5) вказують на те, що кластери мають певне перекриття, що відповідає візуальному аналізу даних, де класи Versicolor та Virginica частково накладаються.\n",
-    "\n",
-    "\n",
+    "<br>\n",
     "4. Аналіз стабільності до зміни порядку об'єктів <br>\n",
     "Для п'яти обраних моделей було проведено тестування стабільності шляхом 100-кратної перестановки порядку об'єктів у датасеті. Результати виявили значні відмінності у стабільності різних конфігурацій. Було виявлено, щл існує чітка залежність між значенням параметра threshold та стабільністю алгоритму. Малі значення threshold (0.1) призводять до дуже щільного CF-дерева з детальною структурою, що робить алгоритм практично детерміністичним. Збільшення порогу дозволяє більшу варіативність у формуванні підкластерів, що призводить до залежності результату від порядку обробки даних. Ця залежність є важливою для практичного застосування: якщо потрібна відтворюваність результатів, слід використовувати малі значення threshold, навіть якщо це може призвести до дещо більшого споживання пам'яті.\n",
     "\n",
-    "\n",
+    "<br><br>\n",
     "<b>Висновок:</b><br>\n",
     "Алгоритм BIRCH продемонстрував хороші результати на датасеті Iris, успішно виявивши три основні групи даних. Проте, якість кластеризації (ARI=0.683) вказує на те, що алгоритм має певні труднощі з повним відтворенням справжньої структури класів. Це пояснюється природним перекриттям класів Versicolor та Virginica, що є відомою особливістю цього датасету.\n",
     "Візуальний аналіз результатів показав, що клас Setosa практично завжди виділяється в окремий кластер, тоді як Versicolor та Virginica часто частково змішуються, особливо в області їх перекриття. Це відповідає ботанічним характеристикам цих видів ірисів, де Setosa має виразно відмінні морфологічні характеристики."
